# libdsfilter

./: .gitignore  CMakeLists.txt  DsfilterConfig.cmake.in  NOTICE  README.md  dev.Dockerfile  docker_build.sh  dsfilter.pc.in  latest.Dockerfile  meson.build  prod.Dockerfile  test.Dockerfile  test_build.sh
config/: dsfilter_config.h  dsfilter_config_dev.h  meson.build
include/: BaseCudaFilter.hpp  BaseFilter.hpp  DistanceFilter.hpp  FileMetaBroker.hpp  HashCudaFilter.hpp  PayloadBroker.hpp  ProtoPayloadFilter.hpp  PyPayloadBroker.hpp  TestCudaFilter.hpp  distance.pb.h  meta.pb.h  queue.hpp  utils.hpp
src/: BaseCudaFilter.cu  BaseFilter.cpp  DistanceFilter.cpp  FileMetaBroker.cpp  HashCudaFilter.cpp  PayloadBroker.cpp  ProtoPayloadFilter.cpp  PyPayloadBroker.cpp  TestCudaFilter.cu  distance.pb.cc  meson.build  meta.pb.cc
src/pkg-config/: meson.build
src/test/: meson.build  test_cu_create_destroy.cu
test/: CMakeLists.txt  test_FileMetaBroker.cpp  test_cu_create_destroy.cu  test_queue.cpp
